# minesweeper

./: CMakeLists.txt  Tile.h  main.cpp
files/: config.cfg
